--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+dist
+.env
+
 # Logs
 logs
 *.log
@@ -27,9 +30,6 @@ coverage
 
 # Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
-
-# Bower dependency directory (https://bower.io/)
-bower_components
 
 # node-waf configuration
 .lock-wscript
