--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   ],
   "scripts": {
     "lint": "standard",
-    "build": "del dist; babel --source-maps --out-dir dist src/index.js",
-    "start": "nodemon --exec babel-node -r dotenv/config src/index.js"
+    "build": "del dist; babel --source-maps --out-dir dist src/",
+    "start": "DEBUG=gits nodemon --exec babel-node -r dotenv/config src/index.js",
+    "update-toc": "markdown-toc -i ./README.md"
   },
   "babel": {
     "presets": [
@@ -61,6 +62,10 @@
     "standard": "^14.3.1"
   },
   "dependencies": {
+    "bluebird": "^3.7.2",
+    "debug": "^4.1.1",
+    "lodash": "^4.17.15",
+    "markdown-toc": "^1.2.0",
     "yargs": "^15.0.2"
   }
 }
