--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "standard": "^14.3.1"
   },
   "dependencies": {
+    "async": "^3.2.0",
     "bluebird": "^3.7.2",
     "debug": "^4.1.1",
     "lodash": "^4.17.15",
