Show migration note

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ branches:
   only:
     - master
     # Required, or Travis won't trigger deploys when a new tag is pushed.
-    # Version tags should be of the form: v0.1.0
-    - /^v\d+\.\d+\.\d+$/
+    # Version tags should be of the form: v0.1.0-*
+    - /^v\d+\.\d+\.\d+\-.+/
 
 before_script: npm run lint
 script: npm run build
