--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@duylam/git-gc",
-  "version": "1.0.4",
+  "version": "1.0.5-beta.1",
   "description": "A command line tool to clean up unused git branches",
   "bin": {
     "git-gc": "./cli.js"
